salesforce-spacetraders/force-app/main/default/objects/User/fields/spaceTraderId__c.field-meta.xml
<CustomField>
    <fullName>spaceTraderId__c</fullName>
    <description>Id field for the username returned from the spacetraders API</description>
    <externalId>true</externalId>
    <label>spaceTrader Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>