salesforce-spacetraders/force-app/main/default/objects/User/fields/spacetradersToken__c.field-meta.xml
<CustomField>
    <fullName>spacetradersToken__c</fullName>
    <description>Store the user token for spacetraders api</description>
    <label>spacetradersToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>