salesforce-spacetraders/force-app/main/default/objects/User/fields/spaceTraderUsername__c.field-meta.xml
<CustomField>
    <fullName>spaceTraderUsername__c</fullName>
    <description>Username field for the username returned from the spacetraders API</description>
    <externalId>true</externalId>
    <label>spacetradersUsername</label>
    <length>100</length>
    <type>Text</type>
</CustomField>